Todo List layout ayarlandı.

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,22 @@
 		<title>Template Project</title>
 		<link rel="icon" href="../src/images/account.svg" type="image/x-icon" />
 	</head>
-	<body ontouchstart="">		
+	<body ontouchstart="">
+		<div class="grid-container">
+			<div class="header">TO DO</div>
+			<div class="left-bar">
+				<div class="static-list">
+					<div class="inbox">INBOX</div>
+					<div class="important">IMPORTANT</div>
+					<div class="upcoming">UPCOMING</div>
+					<div class="completed">COMPLETED</div>
+				</div>
+				<div class="sortable-list">
+					<div class="project-1">Project 1</div>
+				</div>
+			</div>
+			<div class="main-content"></div>
+			<div class="right-bar"></div>
+		</div>
 	</body>
 </html>
