main content tasarımını tamamladım.

--- a/src/index.html
+++ b/src/index.html
@@ -109,18 +109,204 @@
 			</div>
 			<div class="main-content">
 				<div class="content-header">
-					<div class="icon"><img src="images/star-sharp-svgrepo-com.svg" alt="" /></div>
+					<div class="icon"><img src="images/header-important.svg" alt="" /></div>
 					<p>Important</p>
-					<div class="dropdown"></div>
+					<div class="dropdown">
+						<button><img src="images/dots-horizontal.svg" alt="" /></button>
+					</div>
 				</div>
 				<div class="add-a-task-container">
-					<div class="add-a-task-input"></div>
-					<div class="add-a-task-submit"></div>
+					<div class="add-a-task-input-wrapper">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<input type="text" class="add-a-task-input" placeholder="Add a task" />
+					</div>
+					<div class="add-a-task-submit-wrapper">
+						<div class="icon">
+							<img src="images/calendar-1-svgrepo-com.svg" alt="" />
+						</div>
+						<button class="add-a-task-button">Add</button>
+					</div>
 				</div>
 				<div class="content">
-					<div class="task-list-item"></div>
-					<div class="task-list-item"></div>
-					<div class="task-list-item"></div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis!
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis!
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis!
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					<div class="task-list-item">
+						<div class="icon">
+							<img src="images/unchecked.svg" alt="" />
+						</div>
+						<div class="item-text-container">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
+								vel id praesentium fugit quibusdam similique cum ipsum facilis
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+							</p>
+							<div class="project-name">Inbox</div>
+						</div>
+						<div class="important">
+							<img src="images/header-important.svg" alt="" />
+						</div>
+					</div>
+					
 				</div>
 			</div>
 			<div class="right-bar"></div>
