checkbox ve add a task tuşlarını tasarımlarını ve çalışmasını tamamladım.

--- a/src/index.html
+++ b/src/index.html
@@ -22,73 +22,31 @@
 			</div>
 			<div class="left-bar" data-state="open">
 				<div class="static-list">
-					<div class="inbox list-item">
+					<div class="inbox list-item menu-button">
 						<div class="icon"><img src="images/inbox-svgrepo-com.svg" alt="" /></div>
 						<p>Inbox</p>
 					</div>
-					<div class="important list-item">
+					<div class="important list-item menu-button">
 						<div class="icon">
 							<img src="images/star-sharp-svgrepo-com.svg" alt="" />
 						</div>
 						<p>Important</p>
 					</div>
-					<div class="upcoming list-item">
+					<div class="upcoming list-item menu-button">
 						<div class="icon">
 							<img src="images/calendar-1-svgrepo-com.svg" alt="" />
 						</div>
 						<p>Upcoming</p>
 					</div>
-					<div class="completed list-item">
+					<div class="completed list-item menu-button">
 						<div class="icon">
 							<img src="images/order-completed-svgrepo-com.svg" alt="" />
 						</div>
 						<p>Completed</p>
 					</div>
 				</div>
-				<div class="sortable-list">
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
-						<div class="icon">
-							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
-						</div>
-						<p>Project 1</p>
-					</div>
-					<div class="project-1 list-item">
+				<div class="project-list">
+					<div class="project-1 list-item menu-button">
 						<div class="icon">
 							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
 						</div>
@@ -132,7 +90,8 @@
 				<div class="content">
 					<div class="task-list-item">
 						<div class="icon">
-							<img src="images/unchecked.svg" alt="" />
+							<input id="checkbox" class="checkbox" type="checkbox" />
+							<label for="checkbox"></label>
 						</div>
 						<div class="item-text-container">
 							<p>
@@ -186,7 +145,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -202,7 +166,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -218,7 +187,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -234,7 +208,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -250,7 +229,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -266,7 +250,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -282,7 +271,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -298,7 +292,12 @@
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab magni
 								vel id praesentium fugit quibusdam similique cum ipsum facilis
-								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fugiat officia, harum aperiam culpa deleniti vel impedit doloribus ipsa numquam odio asperiores reiciendis beatae magni iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit numquam distinctio quos.
+								corporis! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								Sunt fugiat officia, harum aperiam culpa deleniti vel impedit
+								doloribus ipsa numquam odio asperiores reiciendis beatae magni
+								iusto, non iste! Aliquam iure voluptatum voluptas? Pariatur amet sed
+								ut odio, dolor itaque ducimus, nisi facere error sit eos atque velit
+								numquam distinctio quos.
 							</p>
 							<div class="project-name">Inbox</div>
 						</div>
@@ -306,7 +305,6 @@
 							<img src="images/header-important.svg" alt="" />
 						</div>
 					</div>
-					
 				</div>
 			</div>
 			<div class="right-bar"></div>
