--- a/src/index.html
+++ b/src/index.html
@@ -46,18 +46,18 @@
 					</div>
 				</div>
 				<div class="project-list">
-					<div class="project-1 list-item menu-button">
+					<!-- <div class="project-1 list-item menu-button">
 						<div class="icon">
 							<img src="images/list-ul-alt-svgrepo-com.svg" alt="" />
 						</div>
 						<p>Project 1</p>
-					</div>
+					</div> -->
 				</div>
 				<div class="new-list list-item">
 					<div class="icon">
 						<img src="images/plus-large-svgrepo-com.svg" alt="" />
 					</div>
-					<p>New list</p>
+					<input type="text" class="new-project-input" placeholder="New Input" />
 				</div>
 				<div class="hide-left">
 					<button class="hide-left-button">
@@ -82,7 +82,7 @@
 					</div>
 					<div class="add-a-task-submit-wrapper">
 						<div class="icon">
-							<img src="images/calendar-1-svgrepo-com.svg" alt="" />
+							<input class="date-input" type="date" />
 						</div>
 						<button class="add-a-task-button">Add</button>
 					</div>
@@ -102,7 +102,12 @@
 							<div class="project-name">Inbox</div>
 						</div>
 						<div class="important">
-							<img src="images/header-important.svg" alt="" />
+							<input
+								id="important-checkbox"
+								class="important-checkbox"
+								type="checkbox"
+							/>
+							<label for="important-checkbox"></label>
 						</div>
 					</div>
 					<div class="task-list-item">
