--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,15 @@
 					</div>
 				</div>
 				<div class="content">
+					<div class="task-list-group collapsed" data-loaded="false">
+						<div class="icon">
+							<img src="./images/chevron-right.svg" alt="" />
+						</div>
+						<div class="group-text-container">
+							<p>Project Label</p>
+							<p>5</p>
+						</div>
+					</div>
 					<div class="task-list-item">
 						<div class="icon">
 							<input id="checkbox" class="checkbox" type="checkbox" />
