left-bar style ekledim.

--- a/src/index.html
+++ b/src/index.html
@@ -340,7 +340,26 @@
 					</div>
 				</div>
 			</div>
-			<div class="right-bar"></div>
+			<div class="right-bar" data-state="open">
+				<div class="setting-body">
+					<div class="add-step-container"></div>
+					<div class="add-due-date-container"></div>
+					<div class="move-task-to"></div>
+					<div class="add-note-container"></div>
+					
+				</div>
+				<div class="setting-footer">
+					<div class="hide-right">
+						<button class="hide-right-button">
+							<img src="images/hide-left.svg" alt="" />
+						</button>
+					</div>
+					<div class="created-date">19/04/2025</div>
+					<div class="delete">
+						<div class="icon"><img src="images/trash.svg" alt="" /></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
