--- a/src/index.html
+++ b/src/index.html
@@ -340,13 +340,25 @@
 					</div>
 				</div>
 			</div>
-			<div class="right-bar" data-state="open">
+			<div class="right-bar" data-state="close">
 				<div class="setting-body">
-					<div class="add-step-container"></div>
-					<div class="add-due-date-container"></div>
+					<div class="task">
+						<div class="icon">
+							<input id="checkbox" class="checkbox" type="checkbox" />
+							<label for="checkbox"></label>
+						</div>
+						<p class="task-name">Task Name</p>
+						<div class="important">
+							<input
+								id="important-checkbox"
+								class="important-checkbox"
+								type="checkbox"
+							/>
+							<label for="important-checkbox"></label>
+						</div>
+					</div>
 					<div class="move-task-to"></div>
-					<div class="add-note-container"></div>
-					
+					<div class="add-note"></div>
 				</div>
 				<div class="setting-footer">
 					<div class="hide-right">
