--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
 	<body ontouchstart="">
 		<div class="grid-container">
 			<div class="header">
-				<div class="hide-left">
+				<!-- <div class="hide-left">
 					<button class="hide-left-button">
 						<img src="images/hide-left.svg" alt="" />
 					</button>
-				</div>
+				</div> -->
 				<div class="header-item">
 					<div class="icon"><img src="images/task-square-svgrepo-com.svg" alt="" /></div>
 					<p>To Do</p>
@@ -77,9 +77,9 @@
 				<div class="content-header">
 					<div class="icon"><img src="images/header-important.svg" alt="" /></div>
 					<p>Important</p>
-					<div class="dropdown">
+					<!-- <div class="dropdown">
 						<button><img src="images/dots-horizontal.svg" alt="" /></button>
-					</div>
+					</div> -->
 				</div>
 				<div class="add-a-task-container">
 					<div class="add-a-task-input-wrapper">
@@ -340,7 +340,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="right-bar" data-state="close">
+			<!-- <div class="right-bar" data-state="open">
 				<div class="setting-body">
 					<div class="task">
 						<div class="icon">
@@ -371,7 +371,7 @@
 						<div class="icon"><img src="images/trash.svg" alt="" /></div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</body>
 </html>
